DataFrame Creation (Read and Write) and Output Modes

--- a/01. Exploring Spark SQL/01. Exploring Data Source API.ipynb
+++ b/01. Exploring Spark SQL/01. Exploring Data Source API.ipynb
@@ -1,6 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "9a96dde8-24f2-440c-a1bd-f074080e0f7b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "# Create DataFrame Reader"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -18,8 +37,644 @@
    },
    "outputs": [],
    "source": [
-    "print(\"Welcome to Databricks Training!\")"
+    "type(spark)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "24facb7c-2715-466d-8665-8cd237c74216",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "dfr = spark.read\n",
+    "print (type(dfr))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "8fd28e8f-d903-4d5b-9d69-773686b12275",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "# Creating DataFrame from different Source"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "208e3a26-8d42-4cfc-86b4-521a1f4e20d1",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "## Create DataFrame from CSV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "1a583642-1b9e-47f4-89eb-39f4fc5c38a9",
+     "showTitle": false,
+     "tableResultSettingsMap": {
+      "0": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1764075953121}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 0
+      }
+     },
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df = spark.read.csv(\n",
+    "    path=\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/dataset/sample_dataset/users_001.csv\",\n",
+    "    header=True,\n",
+    "    inferSchema=True  # inferschema shows the particular datatype of each column in the the datasource\n",
+    ")\n",
+    "df.printSchema()\n",
+    "df.display()  # display data in the form of rows and columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "a137c8f1-3c7f-4eb9-bdb5-6f186b419e24",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "19953ea2-0636-4254-a854-58a25656963b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "## Create DataFrame from Delimiter\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "b74abeb8-4a20-4f98-b9cf-4c7df576d742",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df = spark.read.csv(\n",
+    "    path=\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/dataset/sample_dataset/users_001.csv\",\n",
+    "    header=True,\n",
+    "    inferSchema=True,\n",
+    "    sep=\" \"  \n",
+    ")\n",
+    "df.printSchema()\n",
+    "df.display()  # display data in the form of rows and columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "ea044fd0-2ac3-4916-84ae-e920d68cabb9",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "## Create DataFrame from JSON"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "5f707ef5-e93c-4d67-b9da-bf8966da76b7",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "spark.read.json(\n",
+    "    path=\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/dataset/sample_dataset/users_004.json\",\n",
+    "    multiLine=True,\n",
+    ").display()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "456ad1a8-39c0-48da-895c-c1740e6a569c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "# Custom Schema"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "4b881371-dfd7-4c71-83ad-f7b0c35c9b90",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# To avoid the usage of inferschema as inferSchema is very expensive, we use structType to define the data type of each column\n",
+    "\n",
+    "from pyspark.sql.types import *\n",
+    " \n",
+    "USER_SCHEMA = StructType(\n",
+    "    [\n",
+    "        StructField(\"id\", IntegerType()), #StructField is each column name\n",
+    "        StructField(\"age\", IntegerType()),\n",
+    "        StructField(\"gen\", StringType()),\n",
+    "        StructField(\"designation\", StringType()),\n",
+    "        StructField(\"salary\", IntegerType()),\n",
+    "    ]\n",
+    ")\n",
+    "df = spark.read.csv(\n",
+    "    path=\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/dataset/sample_dataset/users_001.csv\",\n",
+    "    header=True,\n",
+    "    schema=USER_SCHEMA\n",
+    ")\n",
+    "df.printSchema()\n",
+    "df.display()\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "7eb02778-01c5-4add-be5f-f79b9ac13e84",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "0d14ff38-2f2e-4357-a7cc-d44050559084",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "# Handling Bad Records\n",
+    "\n",
+    "There are three modes:\n",
+    "1. PERMISSIVE -  Here bad record automatically goes to a column called _corrupt_record (It is a default mode)\n",
+    "2. DROPMALFORMED - it will drop the bad record\n",
+    "2. FAILFAST - it will not allow to create dataframe, it will just show out the fail message"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e2cfa616-3ed6-4dfa-9c1d-9d5c82501200",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "spark.read.json(\n",
+    "    path=\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/dataset/access_logs.json\",\n",
+    "    mode=\"PERMISSIVE\"\n",
+    ").display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "5d9bb1c5-854a-4a1a-b69f-7ed6230ecd48",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "spark.read.json(\n",
+    "    path=\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/dataset/access_logs.json\",\n",
+    "    mode=\"DROPMALFORMED\"\n",
+    ").display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "2dcb4b80-1f85-42e9-a699-a1380d9b484c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "spark.read.json(\n",
+    "    path=\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/dataset/access_logs.json\",\n",
+    "    mode=\"FAILFAST\"\n",
+    ").display()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "ead62938-580b-4abc-89a5-97bcf3eecfec",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "# DataFrame Writer API\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "faaac62c-c4fe-4c3e-930b-6651bfc8b0d2",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "## Convert from CSV to JSON"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c8dfc639-6f47-49f0-8856-e5d3079c56b9",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#Here we are reading the data in the form of CSV and writing it in the form of JSON using df.write function\n",
+    "df = spark.read.csv(\n",
+    "    path=\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/dataset/sample_dataset/users_001.csv\",\n",
+    "    header=True,\n",
+    "    inferSchema=True,\n",
+    ")\n",
+    "print(type(df.write))\n",
+    "df.write.save(\n",
+    "    format=\"JSON\",\n",
+    "    path=\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/output_json\",\n",
+    ")\n",
+    " \n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "2b7301f6-272d-4046-acf4-5ac813fdbc8a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "spark.read.json(\n",
+    "    path=\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/output_json\"\n",
+    ").show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "b731dfe4-e8af-418f-8ef9-1522b69bdf73",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "# Output Modes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "4235c432-0c6f-4633-ae38-6a604222a7b9",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### errorifexists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "be66d1c2-0b79-4c2f-b7ba-42eac0fa06f7",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df.write.save(\n",
+    "    format=\"JSON\",\n",
+    "    path=\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/output_json\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "54edc393-5d55-4531-a232-f4f9bbf8da84",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### overwrite"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "73dfe667-9c0f-4360-a211-f80019d82559",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df.write.save(\n",
+    "    format=\"JSON\",\n",
+    "    path=\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/output_json\",\n",
+    "    mode=\"overwrite\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "4cf6cc03-8b3f-4c50-9ccf-97429878d2e7",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### append \n",
+    "New path is append with the existing path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c750477e-4c54-4985-bc29-4e0e4e9fc694",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df.write.save(\n",
+    "    format=\"JSON\",\n",
+    "    path=\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/output_json\",\n",
+    "    mode=\"append\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "a2f08f4d-77d1-4f75-9ac0-c7c66a254172",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### ignore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "5e820c33-fa9d-418b-9d40-953b2ae944ce",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df.write.save(\n",
+    "    format=\"JSON\",\n",
+    "    path=\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/output_json\",\n",
+    "    mode=\"ignore\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "c5307d04-2e81-45d0-948d-ca4d0d95db29",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": []
   }
  ],
  "metadata": {
